--- a/src/app/pages/footer-template/footer-template.page.html
+++ b/src/app/pages/footer-template/footer-template.page.html
@@ -49,13 +49,13 @@
         <ion-footer>
           <ion-toolbar>
             <ion-row>
-              <ion-col [size]="6">
+              <ion-col>
                 <ion-button expand="full"
                   (click)="portComponent.hideAddItemTemplate()">
                   Cancel
                 </ion-button>
               </ion-col>
-              <ion-col [size]="6">
+              <ion-col>
                 <ion-button expand="full"
                   (click)="isAdd ? addPort() : savePort(port)"
                   [disabled]="!portForm.valid">
