--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -96,6 +96,9 @@
       <ion-item detail="true" href="/group-right-template">
         Group right template
       </ion-item>
+      <ion-item detail="true" href="/header-template">
+        Header template
+      </ion-item>
       <ion-item detail="true" href="/item-template">
         Item template
       </ion-item>
