--- a/src/app/pages/header-template/header-template.page.html
+++ b/src/app/pages/header-template/header-template.page.html
@@ -18,7 +18,7 @@
     </ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Port 2</ion-label>
+    <ion-label>Port</ion-label>
     <ionic-selectable #portComponent [(ngModel)]="port" itemValueField="id"
       itemTextField="name" [items]="ports" [canSearch]="true"
       closeButtonSlot="end">
