--- a/src/app/pages/header-template/header-template.page.html
+++ b/src/app/pages/header-template/header-template.page.html
@@ -20,8 +20,7 @@
   <ion-item>
     <ion-label>Port</ion-label>
     <ionic-selectable #portComponent [(ngModel)]="port" itemValueField="id"
-      itemTextField="name" [items]="ports" [canSearch]="true"
-      closeButtonSlot="end">
+      itemTextField="name" [items]="ports" closeButtonSlot="end">
       <ng-template ionicSelectableHeaderTemplate>
         <ion-toolbar>
           <ion-buttons [slot]="portComponent.closeButtonSlot">
