--- a/src/app/pages/scroll-to-top/scroll-to-top.page.html
+++ b/src/app/pages/scroll-to-top/scroll-to-top.page.html
@@ -14,7 +14,7 @@
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
-      Usage of <b>scrollToTop()</b> method to scrolls to the top of select page
+      Usage of <b>scrollToTop()</b> method to scrolls to the top of Modal
       content every 5 seconds.
     </ion-label>
   </ion-item>
