--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -102,8 +102,8 @@
       <ion-item detail="true" href="/item-template">
         Item template
       </ion-item>
-      <ion-item detail="true" href="/item-right-template">
-        Item right template
+      <ion-item detail="true" href="/item-end-template">
+        Item end template
       </ion-item>
       <ion-item detail="true" href="/message-template">
         Message template
