--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -93,8 +93,8 @@
       <ion-item detail="true" href="/group-template">
         Group template
       </ion-item>
-      <ion-item detail="true" href="/group-right-template">
-        Group right template
+      <ion-item detail="true" href="/group-end-template">
+        Group end template
       </ion-item>
       <ion-item detail="true" href="/header-template">
         Header template
