--- a/src/app/pages/group-end-template/group-end-template.page.html
+++ b/src/app/pages/group-end-template/group-end-template.page.html
@@ -8,13 +8,13 @@
 </ion-header>
 <ion-content>
   <ion-item lines="full">
-    <a href="{{'group-right-template' | wikiUrl}}">
+    <a href="{{'group-end-template' | wikiUrl}}">
       GitHub
     </a>
   </ion-item>
   <ion-item lines="full">
     <ion-label text-wrap>
-      Setting group right template.
+      Setting group end template.
     </ion-label>
   </ion-item>
   <ion-item>
@@ -22,7 +22,7 @@
     <ionic-selectable [(ngModel)]="port" itemValueField="id"
       itemTextField="name" groupValueField="country.id"
       groupTextField="country.name" [items]="ports" [canSearch]="true">
-      <ng-template ionicSelectableGroupRightTemplate let-group="group">
+      <ng-template ionicSelectableGroupEndTemplate let-group="group">
         <img class="country-flag" [src]="group.items[0].country.flagUrl" />
       </ng-template>
     </ionic-selectable>
