--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -105,6 +105,9 @@
       <ion-item detail="true" href="/item-end-template">
         Item end template
       </ion-item>
+      <ion-item detail="true" href="/item-icon-template">
+        Item icon template
+      </ion-item>
       <ion-item detail="true" href="/message-template">
         Message template
       </ion-item>
