Enforce full template type check in build - PR #154 by trik.

--- a/src/app/components/ionic-selectable/ionic-selectable-modal.component.html
+++ b/src/app/components/ionic-selectable/ionic-selectable-modal.component.html
@@ -119,7 +119,7 @@
   </div>
   <ion-infinite-scroll *ngIf="!selectComponent.hasVirtualScroll"
     [disabled]="!selectComponent.hasInfiniteScroll"
-    (ionInfinite)="selectComponent._getMoreItems($event)">
+    (ionInfinite)="selectComponent._getMoreItems()">
     <ion-infinite-scroll-content></ion-infinite-scroll-content>
   </ion-infinite-scroll>
   <ion-virtual-scroll no-margin
