--- a/src/app/components/ionic-selectable/ionic-selectable-modal.component.html
+++ b/src/app/components/ionic-selectable/ionic-selectable-modal.component.html
@@ -45,7 +45,7 @@
     <div class="ionic-selectable-spinner-background"></div>
     <ion-spinner></ion-spinner>
   </div>
-  <ion-list no-margin
+  <ion-list class="ion-no-margin"
     *ngIf="!selectComponent.hasVirtualScroll && selectComponent._hasFilteredItems">
     <ion-item-group *ngFor="let group of selectComponent._filteredGroups"
       class="ionic-selectable-group">
@@ -113,7 +113,7 @@
     <span *ngIf="selectComponent.searchFailTemplate"
       [ngTemplateOutlet]="selectComponent.searchFailTemplate">
     </span>
-    <div *ngIf="!selectComponent.searchFailTemplate" margin>
+    <div *ngIf="!selectComponent.searchFailTemplate" class="ion-margin">
       {{selectComponent.searchFailText}}
     </div>
   </div>
