fix: platform ios add padding top(safe area) on ion-tolbar

--- a/src/app/components/ionic-selectable/ionic-selectable.component.scss
+++ b/src/app/components/ionic-selectable/ionic-selectable.component.scss
@@ -222,7 +222,7 @@ $item-padding-end-ios: 8px;
   }
 
   ion-header {
-    [ng-reflect-ng-template-outlet] {
+    ion-toolbar:first-of-type {
       padding-top: var(--ion-safe-area-top, 0);
     }
   }
