--- a/src/app/components/ionic-selectable/ionic-selectable.component.scss
+++ b/src/app/components/ionic-selectable/ionic-selectable.component.scss
@@ -61,6 +61,9 @@ $item-padding-end-ios: 8px;
       pointer-events: none;
       color: var(--icon-color, $icon-color);
     }
+    &-template {
+      align-self: center;
+    }
   }
   &-ios {
     .ionic-selectable-value {
