fix: format and change icon

--- a/src/app/components/ionic-selectable/ionic-selectable.component.html
+++ b/src/app/components/ionic-selectable/ionic-selectable.component.html
@@ -28,10 +28,8 @@
     <!-- Fix icon allignment when there's no value or placeholder. -->
     <span *ngIf="!_valueItems.length && !_hasPlaceholder">&nbsp;</span>
   </div>
-  <div *ngIf="iconTemplate"
-      class="ionic-selectable-icon-template">
-      <div [ngTemplateOutlet]="iconTemplate">
-      </div>
+  <div *ngIf="iconTemplate" class="ionic-selectable-icon-template">
+      <div [ngTemplateOutlet]="iconTemplate"></div>
   </div>
   <div *ngIf="!iconTemplate" class="ionic-selectable-icon">
     <div class="ionic-selectable-icon-inner"></div>
