--- a/src/app/pages/icon-template/icon-template.page.html
+++ b/src/app/pages/icon-template/icon-template.page.html
@@ -18,7 +18,7 @@
       itemTextField="name" [items]="ports" [canSearch]="true"
       (onChange)="portChange($event)">
       <ng-template ionicSelectableIconTemplate>
-        <ion-icon name="beer"></ion-icon>
+        <ion-icon name="add-circle"></ion-icon>
       </ng-template>
     </ionic-selectable>
   </ion-item>
