--- a/src/app/components/ionic-selectable/ionic-selectable-modal.component.html
+++ b/src/app/components/ionic-selectable/ionic-selectable-modal.component.html
@@ -23,7 +23,7 @@
   </div>
   <ion-toolbar *ngIf="selectComponent.canSearch || selectComponent.messageTemplate">
     <ion-searchbar *ngIf="selectComponent.canSearch" #searchbarComponent [(ngModel)]="selectComponent._searchText"
-      (ionChange)="selectComponent._filterItems()" (ionClear)="selectComponent._onSearchbarClear()"
+      (ionInput)="selectComponent._filterItems()" (ionClear)="selectComponent._onSearchbarClear()"
       [placeholder]="selectComponent.searchPlaceholder" [debounce]="selectComponent.searchDebounce">
     </ion-searchbar>
     <div class="ionic-selectable-message" *ngIf="selectComponent.messageTemplate">
